# skilllint

./: .continue-here.md  .gitignore  .markdownlint-cli2.jsonc  .markdownlintignore  .pre-commit-config.yaml  .pre-commit-hooks.yaml  .prettierrc  CLAUDE.md  README.md  action.yml  biome.json  cliff.toml  pyproject.toml
.claude/: gsd-file-manifest.json  handoff-rule-documentation-system.md  settings.json  vendor-index.md
.claude/agents/: schema-drift-auditor.md
.claude/backlog/: ty-frontmatter-namespace-conflict.md  ty-frontmatter-utils-method-override.md  ty-test-reporters-errorcode-literal.md
.claude/hooks/: gsd-check-update.cjs  vendor-drift-check.cjs  vendor-drift-check.js
.claude/plan/agentskills-skilllint/: discuss-CONTEXT.md  research-1-existing.md  research-2-features.md  research-3-architecture.md  research-4-pitfalls.md  research-FINDINGS.md
.claude/plans/: stinkysnake-plan.md
.claude/reports/: schema-audit-2026-03-10.md  schema-audit-claude-code-v2.md  schema-audit-claude-code.md  schema-audit-codex-v2.md  schema-audit-codex.md  schema-audit-cursor-skill-md.md  schema-audit-cursor.md  shellcheck-pre-audit-2026-03-10.md
.claude/skills/mmap-processor/: SKILL.md
.claude/smells/: _schema_loader.modernization.20260313-024504.md  _schema_loader.smells.20260313-024504.md  adapter.modernization.20260313-024504.md  adapter.smells.20260313-024504.md  auto_sync_manifests.modernization.20260313-024504.md  auto_sync_manifests.smells.20260313-024504.md  bench_cpu.modernization.20260313-054400.md  bench_cpu.modernization.20260313-054539.md  bench_cpu.smells.20260313-054400.md  bench_cpu.smells.20260313-054522.md  bench_cpu.smells.20260313-054539.md  bench_io.modernization.20260313-054400.md  bench_io.modernization.20260313-054539.md  bench_io.smells.20260313-054400.md  bench_io.smells.20260313-054522.md  bench_io.smells.20260313-054539.md  benchmark_yml.smells.20260313-054539.md  efficiency-review.smells.20260313-054323.md  frontmatter.modernization.20260313-054539.md  frontmatter.smells.20260313-054522.md  frontmatter.smells.20260313-054539.md  generate_violations_fixture.smells.20260313-054522.md  plugin_validator.modernization.20260313-024504.md  plugin_validator.smells.20260313-024504.md  test_benchmark.smells.20260313-054522.md  test_frontmatter_utils.modernization.20260313-024504.md  test_frontmatter_utils.smells.20260313-024504.md
.github/: copilot-instructions.md
.github/workflows/: benchmark.yml  claude-code-review.yml  claude.yml  pages.yml  publish.yml  test.yml
.gsd/: DECISIONS.md  PROJECT.md  REQUIREMENTS.md  STATE.md
.gsd/milestones/M001/: M001-CONTEXT.md  M001-ROADMAP.md  M001-SUMMARY.md
.gsd/milestones/M001/slices/S01/: S01-PLAN.md  S01-RESEARCH.md  S01-SUMMARY.md  S01-UAT.md
.gsd/milestones/M001/slices/S01/tasks/: T01-PLAN.md  T01-SUMMARY.md  T02-PLAN.md  T02-SUMMARY.md
.gsd/milestones/M001/slices/S02/: S02-ASSESSMENT.md  S02-PLAN.md  S02-RESEARCH.md  S02-SUMMARY.md  S02-UAT.md
.gsd/milestones/M001/slices/S02/tasks/: T01-PLAN.md  T01-SUMMARY.md  T02-PLAN.md  T02-SUMMARY.md
.gsd/milestones/M001/slices/S03/: S03-ASSESSMENT.md  S03-PLAN.md  S03-RESEARCH.md  S03-SUMMARY.md  S03-UAT.md
.gsd/milestones/M001/slices/S04/: S04-PLAN.md  S04-RESEARCH.md  S04-SUMMARY.md  S04-UAT.md
.gsd/milestones/M002/: M002-CONTEXT.md  M002-ROADMAP.md  M002-SUMMARY.md
.gsd/milestones/M002/slices/S01/: S01-ASSESSMENT.md  S01-PLAN.md  S01-RESEARCH.md  S01-SUMMARY.md  S01-UAT.md
.gsd/milestones/M002/slices/S02/: S02-CONTEXT.md  S02-PLAN.md  S02-SUMMARY.md
.gsd/milestones/M002/slices/S03/: S03-ASSESSMENT.md  S03-CONTEXT.md  S03-PLAN.md  S03-SUMMARY.md
.gsd/milestones/M002/slices/S04/: S04-ASSESSMENT.md  S04-FINDINGS.md  S04-PLAN.md  S04-RESEARCH.md  S04-SUMMARY.md  S04-UAT.md
.gsd/milestones/M002/slices/S05/: S05-ASSESSMENT.md  S05-PLAN.md  S05-RESEARCH.md  S05-SUMMARY.md  S05-UAT.md
.gsd/milestones/M002/slices/S06/: S06-FINDINGS-REPORT.md  S06-PLAN.md  S06-RESEARCH.md  S06-SUMMARY.md  S06-UAT.md
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md
.planning/codebase/: ARCHITECTURE.md  CONCERNS.md  CONVENTIONS.md  INTEGRATIONS.md  STACK.md  STRUCTURE.md  TESTING.md
.planning/phases/01-package-structure/: 01-01-PLAN.md  01-02-PLAN.md  01-03-PLAN.md  01-03-SUMMARY.md  01-RESEARCH.md  01-VERIFICATION.md
.planning/phases/02-platform-adapters/: 02-01-PLAN.md  02-01-SUMMARY.md  02-02-PLAN.md  02-02-SUMMARY.md  02-03-PLAN.md  02-03-SUMMARY.md  02-04-PLAN.md  02-04-SUMMARY.md  02-05-PLAN.md  02-05-SUMMARY.md  02-CONTEXT.md  02-RESEARCH.md  02-VALIDATION.md
.planning/research/: cursor-mdc-schema-correction.md  ruff-project-layout-research.md  ruff-rust-structure-research.md  ruff-structure-research.md
.planning/todos/pending/: 2026-03-02-add-issues-from-backlog-to-todo-list.md  2026-03-10-platform-doc-fetch.md  2026-03-17-refactor-mutable-list-mutation-pattern-in-validators.md
bench/: bench_cpu.py  bench_io.py
docs/: ignore-config.md  maintainer-extension-guide.md  vendor-cache-architecture.md  vendor-cache-howto.md  vendor-cache-reference.md
docs/bench/: data.js
docs/plans/: 2026-02-27-initial-packaging.md  2026-03-10-skilllint-refactor-design.md  2026-03-10-skilllint-refactor-plan.md
docs/plans/tasks-1-plugin-linter/: 12-descriptionvalidator-file-type-awareness.md  13-dead-code-removal.md  14-report-counting-fix.md
docs/superpowers/plans/: 2026-03-11-vendor-drift-detection.md
plugins/agentskills-skilllint/: README.md  mission.json
plugins/agentskills-skilllint/.claude-plugin/: plugin.json
plugins/agentskills-skilllint/skills/skilllint/: SKILL.md
plugins/agentskills-skilllint/skills/skilllint/references/: rule-catalog.md
scripts/: __init__.py  assert_rules_completeness.py  bench_comment.py  bench_cpu.py  bench_io.py  bench_profile.py  bench_ratio.py  fetch_platform_docs.py  fetch_spec_schema.py  generate_violations_fixture.py  refresh_schemas.py  resolve_base_ref.py  verify-s06.sh
tests/: test_fetch_platform_docs.py
tests/benchmarks/: conftest.py  test_benchmark.py
(+24 files in other folders)
